--- a/Ch13-Transormers-with-TF2-and-Huggingface/13.1_Spam_Classification_with_BERT.ipynb
+++ b/Ch13-Transormers-with-TF2-and-Huggingface/13.1_Spam_Classification_with_BERT.ipynb
@@ -34,15 +34,6 @@
      "text": [
       "TensorFlow: 2.9.0 installed\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-27 10:57:26.889972: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:26.911333: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:26.912108: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
-     ]
     }
    ],
    "source": [
@@ -312,23 +303,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-27 10:57:31.691399: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-07-27 10:57:31.692025: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:31.692392: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:31.692702: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:32.085915: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:32.086256: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:32.086547: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-27 10:57:32.086812: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 6343 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2070, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow_hub as hub\n",
     "\n",
@@ -351,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -378,10 +353,37 @@
     "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\",\n",
     "                            trainable=True)\n",
     "\n",
-    "# Check the outputs of the Bert layer\n",
     "pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\n",
+    "\n",
+    "hub_encoder = tf.keras.models.Model(\n",
+    "    inputs={\"input_word_ids\": input_word_ids, \"input_mask\": input_mask, \"input_type_ids\": segment_ids}, \n",
+    "    outputs=[pooled_output, sequence_output]\n",
+    ")\n",
+    "\n",
+    "# Check the outputs of the Bert layer\n",
     "print(pooled_output.shape)\n",
     "print(sequence_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'KerasLayer' object has no attribute 'inputs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbert_layer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minputs\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'KerasLayer' object has no attribute 'inputs'"
+     ]
+    }
+   ],
+   "source": [
+    "bert_layer.inputs"
    ]
   },
   {
@@ -400,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary file is at: b'/tmp/tfhub_modules/ce53fe6769d2ac3a260e92555120c54e1aecbea6/assets/vocab.txt'\n",
+      "Vocabulary file is at: b'C:\\\\Users\\\\thush\\\\AppData\\\\Local\\\\Temp\\\\tfhub_modules\\\\ce53fe6769d2ac3a260e92555120c54e1aecbea6\\\\assets\\\\vocab.txt'\n",
       "Configuration do_lower_case of BERT: True\n"
      ]
     }
@@ -495,14 +497,14 @@
      "data": {
       "text/plain": [
        "count    1094.000000\n",
-       "mean       35.924132\n",
-       "std        19.560793\n",
+       "mean       36.256856\n",
+       "std        19.915669\n",
        "min        12.000000\n",
        "25%        18.000000\n",
        "50%        25.000000\n",
-       "75%        55.000000\n",
-       "90%        62.000000\n",
-       "max        77.000000\n",
+       "75%        56.000000\n",
+       "90%        63.000000\n",
+       "max        79.000000\n",
        "dtype: float64"
       ]
      },
@@ -555,13 +557,13 @@
       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
       "            0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-      "            0,     0,     0,     0,     0,     0]], dtype=int32)>, 'input_mask': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
+      "            0,     0,     0,     0,     0,     0]])>, 'input_mask': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
       "array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=int32)>, 'input_type_ids': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])>, 'input_type_ids': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=int32)>}\n"
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])>}\n"
      ]
     }
    ],
@@ -640,9 +642,6 @@
     }
    ],
    "source": [
-    "random_seed = 4321\n",
-    "np.random.seed(4321)\n",
-    "\n",
     "# Shuffling training data as a precaution\n",
     "train_inds = np.random.permutation(len(train_inputs[\"input_word_ids\"]))\n",
     "train_inputs = dict([(k, v[train_inds]) for k, v in train_inputs.items()])\n",
@@ -660,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -694,11 +693,11 @@
     "})\n",
     "\n",
     "\n",
-    "bert_encoder = tfm.nlp.encoders.build_encoder(encoder_config)\n",
+    "#bert_encoder = tfm.nlp.encoders.build_encoder(encoder_config)\n",
     "\n",
     "\n",
     "# Generating a classifier and the encoder\n",
-    "bert_classifier = tfm.nlp.models.BertClassifier(network=bert_encoder, num_classes=2)"
+    "bert_classifier = tfm.nlp.models.BertClassifier(network=hub_encoder, num_classes=2)"
    ]
   },
   {
@@ -717,8 +716,8 @@
     "# Code listing 13.4\n",
     "# Set up epochs and steps\n",
     "epochs = 3\n",
-    "batch_size = 52\n",
-    "eval_batch_size = 52\n",
+    "batch_size = 64\n",
+    "eval_batch_size = 64\n",
     "\n",
     "train_data_size = train_x.shape[0]\n",
     "steps_per_epoch = int(train_data_size / batch_size)\n",
@@ -947,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
