--- a/Ch13-Transormers-with-TF2-and-Huggingface/13.1_Spam_Classification_with_BERT.ipynb
+++ b/Ch13-Transormers-with-TF2-and-Huggingface/13.1_Spam_Classification_with_BERT.ipynb
@@ -303,89 +303,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Downloading the BERT model\n",
-    "\n",
-    "Here we download the BERT model from the TensorFlow hub. and create a Keras layer from that."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-30 22:40:52.591291: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-07-30 22:40:52.592156: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.592522: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.592824: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.993163: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.993507: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.993805: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-07-30 22:40:52.994075: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 6320 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 2070, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow_hub as hub\n",
-    "\n",
-    "bert_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\"\n",
-    "bert_layer = hub.KerasLayer(bert_url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Defining the inputs for the BERT model\n",
-    "\n",
-    "BERT model needs three inputs,\n",
-    "\n",
-    "* Input word IDs - These are the input tokens generated from text and padded to `max_seq_length` with zeros\n",
-    "* Input mask - A matrix of the shape of `input_word_ids` that represents whether an element is a token of a padded value (0s and 1s)\n",
-    "* Segment IDs - A matrix of the shape of `input_word_ids` that represents which sentence/sequence each token belongs to (0s and 1s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_seq_length = 60  # Your choice here.\n",
-    "\n",
-    "# Contains input token ids\n",
-    "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                       name=\"input_word_ids\")\n",
-    "# Contains input mask values\n",
-    "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                   name=\"input_mask\")\n",
-    "# Contains input type (whether token belongs to sequence A or B) values\n",
-    "input_type_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                    name=\"input_type_ids\")\n",
-    "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\",\n",
-    "                            trainable=True)\n",
-    "\n",
-    "output = bert_layer({\"input_word_ids\":input_word_ids, \"input_mask\": input_mask, \n",
-    "                                             \"input_type_ids\": input_type_ids})\n",
-    "\n",
-    "hub_encoder = tf.keras.models.Model(\n",
-    "    inputs={\"input_word_ids\": input_word_ids, \"input_mask\": input_mask, \"input_type_ids\": input_type_ids}, \n",
-    "    outputs={\"sequence_output\": output[\"sequence_output\"], \"pooled_output\": output[\"pooled_output\"]}\n",
-    ")\n",
-    "\n",
-    "# Check the outputs of the Bert layer\n",
-    "#print(pooled_output.shape)\n",
-    "#print(sequence_output.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Analysing the vocabulary of BERT"
    ]
   },
@@ -404,11 +321,17 @@
     }
    ],
    "source": [
+    "# This file is obrained from the articates found in https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\n",
+    "\n",
     "# Get the vocab file path from the BERT layer\n",
-    "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
-    "print(\"Vocabulary file is at: {}\".format(vocab_file))\n",
-    "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
-    "print(\"Configuration {} of BERT: {}\".format(\"do_lower_case\", do_lower_case))\n",
+    "\n",
+    "# You can automatically obtain these via the following code. But for ease of understanding I have fixed them to constants\n",
+    "# bert_layer = hub.KerasLayer(hub_bert_url, trainable=True)\n",
+    "# bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+    "# do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+    "\n",
+    "vocab_file = os.path.join(\"data\", \"vocab.txt\")\n",
+    "do_lower_case = True\n",
     "\n",
     "# Define a tokenizer\n",
     "tokenizer = tfm.nlp.layers.FastWordpieceBertTokenizer(vocab_file=vocab_file, lower_case=do_lower_case)"
@@ -564,8 +487,6 @@
     }
    ],
    "source": [
-    "max_seq_length = 60\n",
-    "\n",
     "packer = tfm.nlp.layers.BertPackInputs(\n",
     "    seq_length=max_seq_length,\n",
     "    special_tokens_dict = tokenizer.get_special_tokens_dict()\n",
@@ -643,7 +564,68 @@
     "train_inputs = dict([(k, v[train_inds]) for k, v in train_inputs.items()])\n",
     "train_y = train_y[train_inds]\n",
     "\n",
-    "print(train_y[:20])"
+    "print(f\"Shuffled train_y labels: {train_y[:20]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Downloading the BERT model\n",
+    "\n",
+    "Here we download the BERT model from the TensorFlow hub. and create a Keras layer from that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining the BERT encoder and inputs\n",
+    "\n",
+    "BERT model needs three inputs,\n",
+    "\n",
+    "* Input word IDs - These are the input tokens generated from text and padded to `max_seq_length` with zeros\n",
+    "* Input mask - A matrix of the shape of `input_word_ids` that represents whether an element is a token of a padded value (0s and 1s)\n",
+    "* Segment IDs - A matrix of the shape of `input_word_ids` that represents which sentence/sequence each token belongs to (0s and 1s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hub_bert_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/4\"\n",
+    "max_seq_length = 60  # Your choice here.\n",
+    "\n",
+    "# Input layers\n",
+    "\n",
+    "# Contains input token ids\n",
+    "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+    "                                       name=\"input_word_ids\")\n",
+    "# Contains input mask values\n",
+    "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+    "                                   name=\"input_mask\")\n",
+    "# Contains input type (whether token belongs to sequence A or B) values\n",
+    "input_type_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
+    "                                    name=\"input_type_ids\")\n",
+    "\n",
+    "# BERT encoder downloaded from TF hub\n",
+    "bert_layer = hub.KerasLayer(hub_bert_url, trainable=True)\n",
+    "\n",
+    "# get the output of the encoder\n",
+    "output = bert_layer({\"input_word_ids\":input_word_ids, \"input_mask\": input_mask, \n",
+    "                                             \"input_type_ids\": input_type_ids})\n",
+    "\n",
+    "# Define the final encoder as with the Functional API\n",
+    "hub_encoder = tf.keras.models.Model(\n",
+    "    inputs={\"input_word_ids\": input_word_ids, \"input_mask\": input_mask, \"input_type_ids\": input_type_ids}, \n",
+    "    outputs={\"sequence_output\": output[\"sequence_output\"], \"pooled_output\": output[\"pooled_output\"]}\n",
+    ")\n",
+    "\n",
+    "# Check the outputs of the Bert layer\n",
+    "print(output[\"pooled_output\"].shape)\n",
+    "print(output[\"sequence_output\"].shape)"
    ]
   },
   {
@@ -672,6 +654,19 @@
    "source": [
     "# Section 13.2\n",
     "\n",
+    "# Generating a classifier and the encoder\n",
+    "bert_classifier = tfm.nlp.models.BertClassifier(network=hub_encoder, num_classes=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "# Another alternative way to get the BERT encoder (not pretrained)\n",
+    "\n",
     "import yaml\n",
     "\n",
     "# https://github.com/tensorflow/models/blob/master/official/nlp/configs/models/bert_en_uncased_base.yaml\n",
@@ -688,12 +683,13 @@
     "    'bert': config_dict\n",
     "})\n",
     "\n",
-    "\n",
-    "#bert_encoder = tfm.nlp.encoders.build_encoder(encoder_config)\n",
-    "\n",
+    "bert_encoder = tfm.nlp.encoders.build_encoder(encoder_config)\n",
     "\n",
     "# Generating a classifier and the encoder\n",
-    "bert_classifier = tfm.nlp.models.BertClassifier(network=hub_encoder, num_classes=2)"
+    "bert_classifier = tfm.nlp.models.BertClassifier(\n",
+    "    network=bert_encoder, num_classes=2\n",
+    ")\n",
+    "\"\"\""
    ]
   },
   {
@@ -720,13 +716,15 @@
     "num_train_steps = steps_per_epoch * epochs\n",
     "warmup_steps = int(num_train_steps * 0.1)\n",
     "\n",
-    "initial_learning_rate = 3e-6\n",
+    "init_lr = 3e-6\n",
+    "end_lr = 0.0\n",
     "\n",
     "# Define the decay\n",
     "linear_decay = tf.keras.optimizers.schedules.PolynomialDecay(\n",
-    "    initial_learning_rate=initial_learning_rate,\n",
-    "    end_learning_rate=0,\n",
-    "    decay_steps=num_train_steps)\n",
+    "    initial_learning_rate=init_lr,\n",
+    "    end_learning_rate=end_lr,\n",
+    "    decay_steps=num_train_steps\n",
+    ")\n",
     "\n",
     "# Define learning rate schedule\n",
     "warmup_schedule = tfm.optimization.lr_schedule.LinearWarmup(\n",
@@ -739,26 +737,6 @@
     "optimizer = tf.keras.optimizers.experimental.Adam(\n",
     "    learning_rate = warmup_schedule\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(200,)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "valid_y.shape"
    ]
   },
   {
@@ -961,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
